--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Todo App",
   "main": "index.js",
   "scripts": {
+    "server": "node server.js",
+    "start": "node index.js",
     "test": "nodemon index.js"
   },
   "keywords": [
@@ -14,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
+    "sqlite3": "^5.1.7"
   }
 }
